# humanizer

./: .gitignore  README.md  binoculars_scorer.py  fast_detectgpt_scorer.py  humanize.py  humanize_server.py  ollama_client.py  prompt.py  pyproject.toml  roberta_scorer.py  scorer.py
docs/superpowers/plans/: 2026-05-04-mlx-port.md
docs/superpowers/specs/: 2026-05-04-mlx-port-design.md
scripts/: bench_scorers.py  calibrate.py  capture_baseline.py  compare_backends.py  oracle_correlation.py  real_loop_correlation.py  spectrum_corpus.py
tests/: conftest.py  test_binoculars_parity.py  test_fast_detectgpt_parity.py  test_ollama_client.py  test_oracle_correlation.py  test_roberta_separation.py
tests/baselines/: binoculars_pytorch.json  fast_detectgpt_pytorch.json  qwen3_raw_calibration.json
